Set Phabricator Base URI in config

--- a/roles/phabricator/tasks/main.yml
+++ b/roles/phabricator/tasks/main.yml
@@ -64,3 +64,8 @@
   command: ./bin/config set pygments.enabled true
   args:
     chdir: /home/phd/phabricator
+
+- name: Set Base URI
+  command: ./bin/config set phabricator.base-uri 'http://phabricator.dev/'
+  args:
+    chdir: /home/phd/phabricator
