--- a/roles/phabricator/tasks/main.yml
+++ b/roles/phabricator/tasks/main.yml
@@ -69,3 +69,22 @@
   command: ./bin/config set phabricator.base-uri 'http://phabricator.dev/'
   args:
     chdir: /home/phd/phabricator
+
+
+- name: Create /home/phd/phabricator-files directory
+  file:
+    path: /home/phd/phabricator-files
+    state: directory
+    owner: phd
+    group: www-data
+    mode: 0775
+
+- name: Set local-disk file storage
+  command: ./bin/config set storage.local-disk.path /home/phd/phabricator-files
+  args:
+    chdir: /home/phd/phabricator
+
+- name: Configure Alternate File Domain
+  command: ./bin/config set security.alternate-file-domain 'http://phabfiles.dev'
+  args:
+    chdir: /home/phd/phabricator
