--- a/vagrant.default.yml
+++ b/vagrant.default.yml
@@ -1,5 +1,6 @@
 ---
 vagrant_hostname: 'phabricator.dev'
+vagrant_alt_file_domain: 'phabfiles.dev'
 vagrant_ip: '192.168.181.223'
 vagrant_cpus: 1
 vagrant_memory: 1024
