--- a/roles/phabricator/tasks/main.yml
+++ b/roles/phabricator/tasks/main.yml
@@ -114,3 +114,8 @@
   command: ./bin/config set diffusion.ssh-user git
   args:
     chdir: /home/phd/phabricator
+
+- name: Enable Imagemagick
+  command: ./bin/config set files.enable-imagemagick true
+  args:
+    chdir: /home/phd/phabricator
