--- a/roles/phabricator/defaults/main.yml
+++ b/roles/phabricator/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
+phabricator_web_user: www-data
 phabricator_phd_user: phd
+phabricator_vcs_user: git
 
-phabricator_install_directory: /home/phd
+phabricator_sshd_port: 2222
 
+phabricator_install_directory: /home/phd/phabricator
 phabricator_storage_local_disk_path: /home/phd/phabricator-files
