--- a/roles/phabricator/tasks/daemon.yml
+++ b/roles/phabricator/tasks/daemon.yml
@@ -12,4 +12,4 @@
 - name: Configure phd.user
   command: ./bin/config set phd.user {{ phabricator_phd_user }}
   args:
-    chdir: /home/phd/phabricator
+    chdir: "{{ phabricator_install_directory }}"
