--- a/roles/phabricator/tasks/database.yml
+++ b/roles/phabricator/tasks/database.yml
@@ -2,9 +2,9 @@
 - name: Set mysql password
   command: ./bin/config set mysql.pass {{ mysql_root_password }}
   args:
-    chdir: /home/phd/phabricator
+    chdir: "{{ phabricator_install_directory }}"
 
 - name: Initialize database storage (use --force for noninteractive version)
   command: ./bin/storage upgrade --force
   args:
-    chdir: /home/phd/phabricator
+    chdir: "{{ phabricator_install_directory }}"
