--- a/roles/phabricator/tasks/main.yml
+++ b/roles/phabricator/tasks/main.yml
@@ -38,7 +38,7 @@
 - name: Set Base URI
   command: ./bin/config set phabricator.base-uri 'http://phabricator.dev/'
   args:
-    chdir: /home/phd/phabricator
+    chdir: "{{ phabricator_install_directory }}"
 
 # Setup MySQL configuration and initialize database storage
 - include: database.yml
