--- a/roles/phabricator/tasks/pygments.yml
+++ b/roles/phabricator/tasks/pygments.yml
@@ -7,4 +7,4 @@
 - name: Enable Pygments in Phabricator configuration
   command: ./bin/config set pygments.enabled true
   args:
-    chdir: /home/phd/phabricator
+    chdir: "{{ phabricator_install_directory }}"
