Install and enable SSHD daemon for Phabricator on port 2222

--- a/roles/phabricator/tasks/diffusion.yml
+++ b/roles/phabricator/tasks/diffusion.yml
@@ -83,4 +83,12 @@
     replace: '\1git\2'
     backup: yes
 
-# TODO: start sshd daemon
+- name: Add systemd phabricator-sshd service
+  template: src=phabricator-sshd.service.j2
+            dest=/lib/systemd/system/phabricator-sshd.service
+
+- name: Enable and start sshd daemon
+  systemd:
+    name: phabricator-sshd
+    state: started
+    enabled: true
