Add phabricator hostname and alternate file domain to default variables

--- a/roles/phabricator/defaults/main.yml
+++ b/roles/phabricator/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+phabricator_hostname: http://phabricator.dev/
+phabricator_alternate_file_domain: http://phabfiles.dev/
+
 phabricator_web_user: www-data
 phabricator_phd_user: phd
 phabricator_vcs_user: git
@@ -6,4 +9,6 @@ phabricator_vcs_user: git
 phabricator_sshd_port: 2222
 
 phabricator_install_directory: /home/phd/phabricator
+phabricator_libphutil_install_directory: /home/phd/libphutil
+phabricator_arcanist_install_directory: /home/phd/arcanist
 phabricator_storage_local_disk_path: /home/phd/phabricator-files
