Change /var/repo owner to phd_user

--- a/roles/phabricator/tasks/diffusion.yml
+++ b/roles/phabricator/tasks/diffusion.yml
@@ -3,7 +3,7 @@
   file:
     path: /var/repo
     state: directory
-    owner: "{{ phabricator_vcs_user }}"
+    owner: "{{ phabricator_phd_user }}"
     mode: 0775
 
 - name: Set diffusion vcs user
